--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: java
+script: mvn -q clean install
 jdk:
-  - oraclejdk7
-  - openjdk7
   - openjdk6
+  - openjdk7
+  - oraclejdk7
+# whitelist
+branches:
+  only:
+    - master
 
 
