--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-script: mvn -f -x hellojsf/pom.xml -q clean install
+script: mvn -f hellojsf/pom.xml -q -X clean install
 jdk:
   - oraclejdk7
 # whitelist
